Added views to create/edit blog post inside the site.

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -26,7 +26,12 @@ h1, h2, h3, h4 {
 }
 
 .date {
-    color: #828282;
+    color: #828282;    
+}
+
+.right {
+    float: right;
+    margin-left: 15px;
 }
 
 .save {
@@ -51,3 +56,7 @@ h1, h2, h3, h4 {
 .post h1 a, .post h1 a:visited {
     color: #000000;
 }
+
+a:link {
+    text-decoration: underline;
+  }
