--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,9 +1,12 @@
 {% extends 'blog/base.html' %}
 {% block content %}
     <div class="post">
+        {% if user.is_authenticated %}
+            <a class="btn btn-default right" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        {% endif %}
         {% if post.published_date %}
-        <div class="date">
-            <p>published: {{ post.published_date }}</p>
+        <div class="date right">
+            <p>published: {{ post.published_date|date:"DATETIME_FORMAT" }}</p>
         </div>
         {% endif %}
         <h2>{{ post.title }}</h2>
