--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,11 +2,11 @@
 {% block content %}
     {% for post in posts %}
         <div class="post">
-            <div class="date">
+            <div class="date right">
                 <p>published: {{ post.published_date }}</p>
             </div>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
+            <p>{{ post.text|linebreaksbr|truncatechars_html:200 }}</p>
         </div>
     {% endfor %}
 {% endblock%}
