--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,12 +2,15 @@
 {% block content %}
     <div class="post">
         {% if user.is_authenticated %}
+            <a class="btn btn-default right" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-trash"></span></a>
             <a class="btn btn-default right" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         {% endif %}
         {% if post.published_date %}
-        <div class="date right">
-            <p>published: {{ post.published_date|date:"DATETIME_FORMAT" }}</p>
-        </div>
+            <div class="date right">
+                <p>published: {{ post.published_date|date:"DATETIME_FORMAT" }}</p>
+            </div>
+        {% else %}
+            <a class="btn btn-default right" href="{% url 'post_publish' pk=post.pk %}"><span class="glyphicon glyphicon-cloud-upload"></span></a>
         {% endif %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
