--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -3,11 +3,10 @@
 {% block content %}
     {% for post in posts %}
         <div class="post">
-            <div class="date right">
-                <p>published: {{ post.published_date }} by: {{ post.author }}</p>
-            </div>
+            <p class="date right">created: {{ post.created_date|date:'DATETIME_FORMAT' }}
+            by: {{ post.author }}</p>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr|truncatechars_html:200 }}</p>
+            <p>{{ post.text|linebreaksbr|truncatechars:200 }}</p>
         </div>
     {% endfor %}
 {% endblock %}
