--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,11 +9,16 @@
     </head>
     <body>
         <div class="page-header">
+            <div class="top-menu">
             {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-                <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+                Hi {{ user.username }}(<a href="{% url 'logout' %}" ><span class="glyphicon glyphicon-log-out" data-toggle="tooltip" data-placement="bottom" title="Logout"></span></a>)&nbsp
+                <a href="{% url 'post_draft_list' %}" class="0top-menu"><span class="glyphicon glyphicon-edit" data-toggle="tooltip" data-placement="bottom" title="Drafts"></span></a>&nbsp
+                <a href="{% url 'post_new' %}" class="0top-menu"><span class="glyphicon glyphicon-plus" data-toggle="tooltip" data-placement="bottom" title="Add post"></span></a>
+            {% else %}
+                <a href="{% url 'login' %}" class="0top-menu"><span class="glyphicon glyphicon-log-in" data-toggle="tooltip" data-placement="bottom" title="Login"></span></a>
             {% endif %}
-            <h1><a href="/">Django Girls Blog - tutorial (fork grzejan)</a></h1>
+            </div>
+            <h1><a href="/" >Django Girls Blog - tutorial (fork grzejan)</a></h1>
         </div>
 
         <div class="content container">
