--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -4,7 +4,7 @@
     {% for post in posts %}
         <div class="post">
             <p class="date right">created: {{ post.created_date|date:'DATETIME_FORMAT' }}
-            by: {{ post.author }}</p>
+            by: {{ post.author.username }}</p>
             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
             <p>{{ post.text|linebreaksbr|truncatechars:200 }}</p>
         </div>
