--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,10 +1,20 @@
 {% load static %}
 <html>
     <head>
-        <title>Django Girls Blog - tutorial (fork grzejan)</title>
+        <title>grzejan blog</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <!--
+        <link rel="stylesheet" href="{% static 'css/bootstrap_3.2.0_css_bootstrap-theme.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/bootstrap_3.2.0_css_bootstrap.min.css' %}">
+        -->
+        <!-- Bootstrap CSS 
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        -->
         <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <!--
+        <link rel="stylesheet" href="{% static 'css/fonts.googleapis.com_css_family_Lobster.css' %}">
+        -->
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
@@ -18,16 +28,36 @@
                 <a href="{% url 'login' %}" class="0top-menu"><span class="glyphicon glyphicon-log-in" data-toggle="tooltip" data-placement="bottom" title="Login"></span></a>
             {% endif %}
             </div>
-            <h1><a href="/" >Django Girls Blog - tutorial (fork grzejan)</a></h1>
+            <h1><a href="/" >grzejan blog</a></h1>
+            <h4 style="color: #ffffff;"> Based on tutorial from https://tutorial.djangogirls.org</h4>
+
         </div>
 
-        <div class="content container">
+        <div class="content container">           
+            
             <div class="row">
                 <div class="col-md-8">
                     {% block content %}
                     {% endblock %}
                 </div>
             </div>
+        </div>
+        <div class="osd">        
+            <small style="color: #ffffff;"> 
+                {% if user.username %}username: {{ user.username }}<br>{% endif %}
+                {% if user.first_name%}first_name: {{ user.first_name }} <br> {% endif %}
+                {% if user.last_name%}last_name: {{ user.last_name }} <br> {% endif %}
+                {% if user.email%}email: {{ user.email}} <br>{% endif %}
+                <br>
+                django:<br>
+                {% if perms.blog.add_post is not None%}perms.blog.add_post: {{ perms.blog.add_post }} <br> {% endif %}
+                {% if perms.blog.change_post is not None%}perms.blog.change_post: {{ perms.blog.change_post }} <br>{% endif %}
+                {% if perms.blog.delete_post is not None%}perms.blog.delete_post: {{ perms.blog.delete_post }} <br> {% endif %}
+                {% if perms.blog.view_post is not None%}perms.blog.view_post: {{ perms.blog.view_post }} <br>{% endif %}
+            </small>
+            
+            {% block osd %}
+            {% endblock %}
         </div>
     </body>
 </html>
