--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,19 +1,48 @@
 {% extends 'blog/base.html' %}
 {% block content %}
+{% load rules %}
+{% test_rule 'can_edit_post' user post as can_edit_post %}
+{% has_perm 'blog.change_post' user post as perm_change_post %}
+{% has_perm 'blog.delete_post' user post as perm_delete_post %}
     <div class="post">
         {% if user.is_authenticated %}
-            <a class="btn btn-default right" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-trash"></span></a>
-            <a class="btn btn-default right" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+            {% if perm_delete_post%}
+            <a href="{% url 'post_remove' post_id=post.pk %}"><span class="btn btn-default right glyphicon glyphicon-trash"></span></a>
+            {% else %}
+            <span disabled class="btn btn-default right glyphicon glyphicon-trash"></span>
+            {% endif%}
+            {% if perm_change_post%}
+            <a  href="{% url 'post_edit' post_id=post.pk %}"><span class="btn btn-default right glyphicon glyphicon-pencil"></span></a>
+            {% else %}
+            <span disabled class="btn btn-default right glyphicon glyphicon-pencil"></span>
+            {% endif%}
         {% endif %}
         {% if post.published_date %}
-            <div class="date right">
-                <p>published: {{ post.published_date|date:"DATETIME_FORMAT" }}</p>
+            <div class="date">
+                <p>published: {{ post.published_date|date:"DATETIME_FORMAT" }} author: {{ post.author.username }}</p>
             </div>
         {% else %}
-            <a class="btn btn-default right" href="{% url 'post_publish' pk=post.pk %}"><span class="glyphicon glyphicon-cloud-upload"></span></a>
+            <a href="{% url 'post_publish' post_id=post.pk %}"><span class="btn btn-default right glyphicon glyphicon-cloud-upload"></span></a>
+            <div class="date">
+                <p>author: {{ post.author.username }}</p>
+            </div>
         {% endif %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
 
 {% endblock%}
+{% block osd %}
+{% load rules %}
+{% test_rule 'can_edit_post' user post as can_edit_post %}
+{% has_perm 'blog.change_post' user post as perm_change_post %}
+{% has_perm 'blog.delete_post' user post as perm_delete_post %}
+    <small>
+        <br>django-rules:<br>
+        {{post}}<br>
+        can_edit_post: {{ can_edit_post }}<br>
+        blog.change_post: {{ perm_change_post }}<br>
+        blog.delete_post: {{ perm_delete_post }}
+    </small>
+
+    {% endblock%}
