--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,11 +3,11 @@
 {% block content %}
     {% for post in posts %}
         <div class="post">
-            <div class="date right">
+            <h2><a href="{% url 'post_detail' post_id=post.pk %}">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr|truncatechars_html:200 }}</p>
+            <div class="date">
                 <p>published: {{ post.published_date }} by: {{ post.author.username }}</p>
             </div>
-            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr|truncatechars_html:200 }}</p>
         </div>
     {% endfor %}
 {% endblock %}
