--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -9,7 +9,7 @@
     {% csrf_token %}
         <div class="form-group">
             {{ form.username.label_tag }}
-            <input type="text" class="form-control" name="{{ form.username.html_name }}" autofocus maxlength="254" required id="{{ form.username.id_for_label }}" placeholder="Enter username">
+            <input type="text" class="form-control" name="{{ form.username.html_name }}"  maxlength="254" required id="{{ form.username.id_for_label }}" placeholder="Enter username">
         </div>
         <div class="form-group">
             {{ form.password.label_tag }}
@@ -30,4 +30,10 @@
         <input type="submit" value="Login" class="btn btn-primary"/>
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
+
+    <p>or</p>
+
+    <a class="btn btn-danger" href="{% url 'social:begin' 'google-oauth2' %}">
+        Sign in with Google
+      </a>
 {% endblock %}
