--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -28,7 +28,7 @@
                 <a href="{% url 'login' %}" class="0top-menu"><span class="glyphicon glyphicon-log-in" data-toggle="tooltip" data-placement="bottom" title="Login"></span></a>
             {% endif %}
             </div>
-            <h1><a href="/" >grzejan blog</a></h1>
+            <h1><a href="/blog/" >grzejan blog</a></h1>
             <h4 style="color: #ffffff;"> Based on tutorial from https://tutorial.djangogirls.org</h4>
 
         </div>
