--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,6 +8,7 @@
             <div class="date">
                 <p>published: {{ post.published_date }} by: {{ post.author.username }}</p>
             </div>
+            <a href="{% url 'post_detail' post_id=post.pk %}">Comments: {{ post.comments.count }}</a>
         </div>
     {% endfor %}
 {% endblock %}
