Change: starpusher improvements

--- a/starpusher/templates/starpusher.html
+++ b/starpusher/templates/starpusher.html
@@ -81,9 +81,9 @@ Backspace to reset level, Esc to quit.
 N for next level, B to go back a level.
 Arrow keys to move. U for undo.</div>
 <div id="board"></div>
-<img style="" src="{% static "pic/RedSelector.png" %}">
-<img style="" src="{% static "pic/Selector.png" %}">
-<img style="" src="{% static "pic/Star.png" %}">
+<img style="display:none" src="{% static "pic/RedSelector.png" %}">
+<img style="display:none" src="{% static "pic/Selector.png" %}">
+<img style="display:none" src="{% static "pic/Star.png" %}">
 <img style="display:none" src="{% static "pic/Wall_Block_Tall.png" %}">
 <img style="display:none" src="{% static "pic/Wood_Block_Tall.png" %}">
 <img style="display:none" src="{% static "pic/Plain_Block.png" %}">
