Changed: spelling mistakes

--- a/starpusher/templates/starpusher.html
+++ b/starpusher/templates/starpusher.html
@@ -165,14 +165,14 @@ function toggle() {
 
 <div id="infoSplash" onclick="toggle()" onkeydown="toggle()" class="inner2" style="display:none">
 <div class="fontDecoration fontWendy" style="margin:10px;text-align:left;">
-Original code comes form: <a href='https://inventwithpython.com/pygame/chapter9.html' target="_blank">https://inventwithpython.com/pygame/chapter9.html</a><br>
+Original code comes from: <a href='https://inventwithpython.com/pygame/chapter9.html' target="_blank">https://inventwithpython.com/pygame/chapter9.html</a><br>
 <br>
 Improvements:<br>
 - multistep Undo<br>
 - time counter<br>
 - character control with mouse or touch<br>
 - web version<br>
--&nbsp;adjustmenst&nbsp;for&nbsp;JS&nbsp;compiler&nbsp;(<a href='http://transcrypt.org/' target="_blank">transcrypt.org</a>)<br>
+-&nbsp;adjustments&nbsp;for&nbsp;JS&nbsp;compiler&nbsp;(<a href='http://transcrypt.org/' target="_blank">transcrypt.org</a>)<br>
  </div></div>
 
 <img style="display:none" src="{% static "pic/RedSelector.png" %}">
